--- a/widget/css/commen.css
+++ b/widget/css/commen.css
@@ -213,6 +213,6 @@ b{display: block;font-weight:400!important;}
     color:#fff;
     background: #007aff;
 }
-
+.bg_add_btn_replay a{color:white!important;}
 
 
